criaçao restantes paginas

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,9 @@
+# Configuração existente...
 DATABASE_URL=postgresql://printstore:derpwuant69@localhost:5433/printstore
 PORT=3001
 JWT_SECRET=xyzlabs_secret_2026
+
+# Configuração de Email (NOVO)
+EMAIL_USER=seu-email@gmail.com
+EMAIL_PASS=sua-senha-ou-app-password
+ADMIN_EMAIL=admin@xyzlabs.pt
