Trabalho sistema de login e registo

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,6 +4,6 @@ PORT=3001
 JWT_SECRET=xyzlabs_secret_2026
 
 # Configuração de Email (NOVO)
-EMAIL_USER=seu-email@gmail.com
-EMAIL_PASS=sua-senha-ou-app-password
-ADMIN_EMAIL=admin@xyzlabs.pt
+EMAIL_USER=angelicasamtos004@gmail.com
+EMAIL_PASS=iwtk nutc itsn dkim 
+ADMIN_EMAIL=ricardopaulo2003@gmail.com
