--- a/Backend/.env
+++ b/Backend/.env
@@ -7,3 +7,4 @@ JWT_SECRET=xyzlabs_secret_2026
 EMAIL_USER=angelicasamtos004@gmail.com
 EMAIL_PASS=iwtk nutc itsn dkim 
 ADMIN_EMAIL=ricardopaulo2003@gmail.com
+API_BASE_URL=http://localhost:3001
