--- a/Backend/.env
+++ b/Backend/.env
@@ -4,7 +4,7 @@ PORT=3001
 JWT_SECRET=xyzlabs_secret_2026
 
 # Configuração de Email (NOVO)
-EMAIL_USER=angelicasamtos004@gmail.com
-EMAIL_PASS=iwtk nutc itsn dkim 
+EMAIL_USER=ricardopaulo2003@gmail.com
+EMAIL_PASS=mmst qkuw ltyq kgxg  
 ADMIN_EMAIL=ricardopaulo2003@gmail.com
 API_BASE_URL=http://localhost:3001
