--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
+    # ===== LIMITE DE TAMANHO DE UPLOAD =====
+    client_max_body_size 100M;  # Permite uploads de até 100MB
+
     # Serve os ficheiros estáticos do frontend (pasta raiz do Frontend/)
     root /usr/share/nginx/html;
 
@@ -18,6 +21,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
+        
+        # ===== TIMEOUT PARA UPLOADS GRANDES =====
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 
     # Fallback — devolve a homepage para rotas desconhecidas
